cabal-version:      3.0

-- The name of the package.
name:               colon

version:            0.1.0.0

license:            BSD-3-Clause

license-file:       LICENSE

-- The package author(s).
author:             k.ahmetchin

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         kalim.ahmetchin2003@gmail.com

-- A copyright notice.
-- copyright:
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable colon
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:   Types.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.17.2.1,
        containers >= 0.6 && < 0.7,
        HUnit >= 1.6 && < 1.7

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite colon-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base, HUnit, colon
  hs-source-dirs:      test